# First_ML_Project

./: README.md  main.py  pyproject.toml  requirements.txt  setup.py
catboost_info/: catboost_training.json  time_left.tsv
catboost_info/learn/: events.out.tfevents
notebook/: 1 . EDA STUDENT PERFORMANCE .ipynb  2. MODEL TRAINING.ipynb
notebook/catboost_info/: catboost_training.json  time_left.tsv
notebook/catboost_info/learn/: events.out.tfevents
src/: exception.py
templates/: home.html  index.html
